# FFmpegTest

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_ffmpegtest_NullRoutinePlayer.h  com_example_ffmpegtest_VideoUtils.h  native-lib.cpp
app/src/main/cpp/include/libswresample/: swresample.h
app/src/main/java/com/example/ffmpegtest/: MainActivity.java  NullRoutinePlayer.java  VideoPlayerActivity.java  VideoUtils.java
app/src/main/java/com/example/ffmpegtest/view/: VideoView.java
app/src/main/res/layout/: activity_main.xml  activity_videoplayer.xml
app/src/test/java/com/example/ffmpegtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
